# aircraft_inspection

./: CMakeLists.txt  README.md  depth_standalone_nodelet.launch  package.xml
component_test/: CMakeLists.txt  package.xml
component_test/include/: frustum_culling.h  frustum_culling_gpu.h  voxel_grid.h  voxel_grid_occlusion_estimation.h  voxel_grid_occlusion_estimation_gpu.h
component_test/include/component_test/: mesh_surface.h  occlusion_culling.h  occlusion_culling_gpu.h  visualization_voxelgrid.h
component_test/rviz/: acuracy_check.rviz  components_combination.rviz  discretization.rviz  dynamic_sampling.rviz  frustum_test.rviz  occlusion_culling.rviz  occlusion_culling_debug.rviz  octomap_test.rviz  quantification_debug.rviz  surface_coverage_eval.rviz  trial_testing.rviz  visualization_voxelgrid.rviz
component_test/src/: accuracy_check.cpp  cgal_interior_skeleton.cpp  cgal_reconstruction.cpp  cgal_test.cpp  collision_distance_test.cpp  components_combination.cpp  coverage_comparison.cpp  coverage_quantification.cpp  coverage_quantification_gpu.cpp  discretization.cpp  dynamic_sampling.cpp  fcl_utility.cpp  filtering.cpp  filtering_old.cpp  frustum_culling.cpp  frustum_culling_gpu.cu  frustum_test.cpp  frustum_test_debug.cpp  intersect_other.cpp  mesh_surface.cpp  occlusion_culling.cpp  occlusion_culling_debug.cpp  occlusion_culling_gpu.cpp  occlusion_culling_test.cpp  octomap_test.cpp  orientation_testing.cpp  reconstruction.cpp  samples_orientation.cpp  sensor_data_combination.cpp  surface_area_path_test.cpp  surface_coverage_evaluation.cpp  trial_testing.cpp  triangulation_mesh.cpp  visualization_voxelgrid.cpp  voxel_grid.cpp  voxel_grid_occlusion_estimation.cpp  voxel_grid_occlusion_estimation_gpu.cu  z_buffer_test.cpp
component_test/src/mesh/: points.vtp  poses.txt  poses1_3.txt  samples.ply
component_test/src/pcd/: apple.pcd  etihad.pcd  etihad_nowheels_densed.pcd  scaled_desktop.pcd  sphere.pcd  sphere_densed.pcd  sphere_verydensed.pcd
component_test/src/txt/: SearchSpace.txt  SearchSpace1.txt  SearchSpaceCam_1.5m_1to4_NEW.txt  SearchSpaceCam_1.5m_2to4_NEW.txt  SearchSpaceCam_1.5m_3to4_NEW.txt  SearchSpaceCam_2to4.txt  SearchSpaceUAV_1.5m_1to4_NEW.txt  SearchSpaceUAV_1.5m_2to4_NEW.txt  SearchSpaceUAV_1.5m_3to4_NEW.txt  SearchSpaceUAV_2to4.txt  SearchSpaceq.txt  SearchSpacer.txt
demo_offboard_position_setpoints/: demo_offboard_position_setpoints.cpp  demo_offboard_position_setpoints.h
demo_offboard_velocity_test/: demo_offboard_velocity_test.cpp
inspection/: CMakeLists.txt  package.xml  rgbd_gazebo.rviz
inspection/config/: iris1  iris2  iris3
inspection/gazebo_models/models/etihad_aircraft_scaled/: model.config  model.sdf
inspection/gazebo_models/world/: aircraft_world_new.world  bridge_world.world  burj_arab_world.world  etihad_aircraft_world_scaled.world  hoa_world.world  iceland_aircraft_world.world
inspection/launch/: firefly_vi_empty_world.launch  firefly_vi_offboard_positiondemo.launch  hummingbird.launch  hummingbird_vi_empty_world.launch  hummingbird_vi_offboard_positiondemo.launch  inspection_scenario.launch  iris_gesture_control.launch  iris_postioncontrol_mapping.launch  multi_agent_inspection_scenario.launch  rivets_plane_scenario.launch  test_launch.launch
inspection/rviz/: octomap_rviz.rviz  plane_rivets.rviz  rgbd_gazebo.rviz  scenario.rviz
inspection/scripts/: 2.5_90path.txt  20_path.txt  2_10path.txt  3_10path.txt  3_70path.txt  3_90path.txt  3_90path_newtests.txt  50_path.txt  DFG_scenario.py  path.txt  path_check.txt  path_demo.py  path_test.py
inspection/src/demo_offboard_velocity_test/: demo_offboard_velocity_test.h
inspection/urdf/iris/: iris_inspection_multi_sensors.gazebo
inspection/urdf/iris_accessories/: extra_sensors.urdf.xacro  iris.xacro  multirotor_base.xacro
launch/: firefly.launch  gazebo_iris_aircraft_world.launch  iris_gesture_control.launch  iris_postioncontrol_mapping.launch  iris_vi_empty_world.launch  iris_vi_offboard_positiondemo.launch  myDemo.launch
scripts/: setpoint_position_demo.py
src/demo_offboard_position_control/: demo_offboard_position_control.cpp  demo_offboard_position_control.h
