<?xml version="1.0"?>
<package>
  <name>aircraft_inspection</name>
  <version>1.0.0</version>
  <description>The inspection package</description>
  <maintainer email="randa.almadhoun@gmail.com">Randa</maintainer>
  <license>LGPLv3</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libmavconn</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>mav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libmavconn</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mav_msgs</run_depend>

  <export>
  </export>
</package>
